relative path css

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,9 +21,9 @@
 
     <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="/scss/normalize.css">
-    <link rel="stylesheet" href="/scss/skeleton.css">
-    <link rel="stylesheet" href="/scss/style.css?{{site.time | date: "%s%N"}}">
+    <link rel="stylesheet" href="./scss/normalize.css">
+    <link rel="stylesheet" href="./scss/skeleton.css">
+    <link rel="stylesheet" href="./scss/style.css?{{site.time | date: "%s%N"}}">
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
